# Orator

./: .gitignore  MANIFEST.in  README.md  config_hotkey.json  orator_app.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
nj_orator/: __init__.py  cli.py  config_manager.py  daemon.py  hotkey_recorder.py  orator_app.py
orator/: __init__.py  g2p.py  onnx_engine.py
