[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nj-orator"
version = "1.0.0"
description = "Orator TTS - Text-to-speech with custom hotkeys"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Niranjan Akella"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy>=1.24.0",
    "soundfile>=0.13.1",
    "onnxruntime>=1.18.0",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "rumps>=0.4.0",
    "loguru>=0.7.3",
    "pyobjc>=10.0",
    "click>=8.0.0",
]

[project.scripts]
orator = "nj_orator.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

